[gd_scene load_steps=4 format=3 uid="uid://1e3iqbu78pwo"]

[ext_resource type="Script" path="res://UI.gd" id="1_f1l6v"]
[ext_resource type="Texture2D" uid="uid://4sg76hi07oem" path="res://Textures/logo.png" id="1_qwgbp"]
[ext_resource type="AudioStream" uid="uid://o62em36g6arf" path="res://SoundEffects/hover.wav" id="6_icibu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f1l6v")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 1150.0
offset_bottom = 650.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("1_qwgbp")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2

[node name="SinglePlayer" type="Button" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Single Player"

[node name="MultiPlayer" type="Button" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Multiplayer
"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_icibu")

[connection signal="focus_entered" from="CenterContainer/VBoxContainer2/VBoxContainer/SinglePlayer" to="." method="_on_single_player_focus_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/SinglePlayer" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/SinglePlayer" to="CenterContainer/VBoxContainer2/VBoxContainer/SinglePlayer" method="_on_pressed"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer2/VBoxContainer/MultiPlayer" to="." method="_on_multi_player_focus_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/MultiPlayer" to="." method="_on_multi_player_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/MultiPlayer" to="CenterContainer/VBoxContainer2/VBoxContainer/MultiPlayer" method="_on_pressed"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer2/VBoxContainer/Options" to="." method="_on_options_focus_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer2/VBoxContainer/Quit" to="." method="_on_quit_focus_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/Quit" to="CenterContainer/VBoxContainer2/VBoxContainer/Quit" method="_on_pressed"]
